add html and css files

--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ padding-left: 90px;
 
 .section-four{
   height: 95vh;
-  background-color: rgb(102, 147, 230);
+ background-image: url(https://wmpics.pics/di-NCXG.jpg);
 }
 
 .map{
