--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ nav a {
     align-items: center;
     padding-top: 250px;
     flex-direction: column;
-    color: #e4c590;
+    color: #fcfcfc;
   }
   
   .section-one article h1{
@@ -90,7 +90,6 @@ nav a {
     height: 100vh;
     background-color: white;
     background-size: 100%;
-    color: #ffffff;
     font-family: 'Readex Pro', sans-serif;
     position: relative;
     display: flex;
@@ -111,7 +110,7 @@ nav a {
     color: black;
     float: right;
     align-items: center;
-    padding-top: 10px;
+    padding-top: 30px;
     padding-right: 50px;
     height: 50px;
 }
@@ -123,10 +122,9 @@ nav a {
 }
 
 .section-two_information-text{
-    color: black;
     float: right;
     width: 100%;
-    padding-top: 25px;
+    padding-top: 120px;
 }
 
 /* section-two finish */
@@ -136,10 +134,11 @@ nav a {
 
 .section-three{
   height: 100%;
-  background:url(https://ru.inettools.net/upload/RoU5HFeiyHIKwOfOtbCazK1VN5f4s2FXFGWH8VKx/201038-1000-ab9cde64e6.Xb5TU.png)no-repeat center top  ;
+  background-color: white;
   color: #000000;
   font-family: 'Readex Pro', sans-serif;
   position: relative;
+  background-color: #eee1c8;
 }
 
 .section-three_name{
